<resources>
    <string name="api_key">AIzaSyCsn0V44OO5CXFwl7c5HmT5UttEL7u87Fg</string>
    <string name="app_name">Light Sensor App</string>
    <string name="button_sensor">Sensor</string>
    <string name="button_simulation">Sensor simulation</string>
    <string name="button_events">Events</string>
    <string name="button_messae">Send Message</string>
    <string name="button_settings">Settings</string>
    <string name="text_location">Current location</string>
    <string name="text_data_type">Sensor data type</string>
    <string name="button_save">Save</string>
    <string name="text_frequency">Sensor frequency (minutes)</string>
    <string name="text_simulation_settings">Simulation settings</string>
    <string name="text_simulation_mode">Simulation mode</string>
    <string name="text_simulation_range">Data range</string>
    <string name="button_simulation_location">Location</string>
    <string-array name="slider">
        <item>250</item>
        <item>500</item>
    </string-array>


</resources>