<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Switch
            android:id="@+id/switchSimMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/text_simulation_mode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_range"
            app:layout_constraintTop_toBottomOf="@id/text_simulation"
             />


        <Button
            android:id="@+id/buttonSelectLocation"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/my_button"
            android:text="@string/button_simulation_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rangeSlider"
            app:layout_constraintBottom_toTopOf="@id/text_location"
             />

        <Button
            android:id="@+id/buttonSaveSettings"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/my_button"
            android:text="@string/button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_location"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_sensor_frequency"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_frequency"
            app:layout_constraintBottom_toTopOf="@+id/frequencySlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <com.google.android.material.slider.Slider
            android:id="@+id/frequencySlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:stepSize="10.0"
            android:valueFrom="10.0"
            android:valueTo="60.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_sensor_frequency"
            app:layout_constraintBottom_toTopOf="@id/barrierSettings"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/barrierSettings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/text_simulation"
            android:background="@android:color/darker_gray"
            tools:layout_editor_absoluteX="dp"
            tools:layout_editor_absoluteY="156dp" />

        <TextView
            android:id="@+id/text_simulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintVertical_chainStyle="packed"
            android:text="@string/text_simulation_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/switchSimMode"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            />

        <TextView
            android:id="@+id/text_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_simulation_range"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/rangeSlider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchSimMode" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="10.0"
            android:valueFrom="0.0"
            android:valueTo="1000.0"
            app:layout_constraintBottom_toTopOf="@id/buttonSelectLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_range"
            app:values="@array/slider" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Name of addres"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonSelectLocation"
            app:layout_constraintBottom_toTopOf="@id/buttonSaveSettings"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:layout_editor_absoluteY="400dp"
            app:constraint_referenced_ids="text_sensor_frequency, frequencySlider"
            >

        </androidx.constraintlayout.widget.Barrier>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>